# rayon

./: Cargo.toml
rayon-core/: Cargo.toml
rayon-core/src/: job.rs  lib.rs  registry.rs
rayon-core/src/broadcast/: mod.rs
rayon-core/src/join/: mod.rs
rayon-core/src/sleep/: mod.rs
rayon-core/src/spawn/: mod.rs
rayon-core/src/thread_pool/: mod.rs
rayon-demo/: Cargo.toml
src/: lib.rs
