cargo-features = ["per-package-target"]
[package]
name = "rayon-core"
version = "1.12.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Josh Stone <cuviper@gmail.com>"]
description = "Core APIs for Rayon"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rayon-rs/rayon"
documentation = "https://docs.rs/rayon/"
rust-version = "1.63"
edition = "2021"
links = "rayon-core"
build = "build.rs"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]

#forced-target = "wasm32-unknown-unknown"
#forced-runner = 'wasm-bindgen-test-runner'

# Some dependencies may not be their latest version, in order to support older rustc.
[dependencies]
crossbeam-deque = {path= "../../crossbeam/crossbeam-deque"}
crossbeam-utils = {path= "../../crossbeam/crossbeam-utils"}


wasm-bindgen = {path= "../../wasm-bindgen"}
env_logger = "0.10.0"
my_log = {package = "log", version = "0.4.17"}

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
scoped-tls = "1.0"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"


[patch.crates-io]
wasm-bindgen = {path= "../../wasm-bindgen"}

[[test]]
name = "stack_overflow_crash"
path = "tests/stack_overflow_crash.rs"

# NB: having one [[test]] manually defined means we need to declare them all

[[test]]
name = "double_init_fail"
path = "tests/double_init_fail.rs"

[[test]]
name = "init_zero_threads"
path = "tests/init_zero_threads.rs"

[[test]]
name = "scope_join"
path = "tests/scope_join.rs"

[[test]]
name = "simple_panic"
path = "tests/simple_panic.rs"

[[test]]
name = "scoped_threadpool"
path = "tests/scoped_threadpool.rs"

[[test]]
name = "use_current_thread"
path = "tests/use_current_thread.rs"
